<resources>

    <string name="app_name">CFE</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="temp">temp</string>
    <string name="hint_id">请输入您的账号</string>
    <string name="hint_pw">请输入您的密码</string>
    <string name="auto_login">自动登录</string>
    <string name="keep_pw">保存密码</string>
    <string name="login">登录</string>
    <string name="done_task">已完成任务</string>
    <string name="undone_task">待完成任务</string>
    <string name="order_list">订单列表</string>
    <string name="title_temp">标题栏</string>
    <string name="get_meal_num">取餐商户</string>
    <string name="send_meal_num">送餐用户</string>
    <string name="position_num">途经地点</string>
    <string name="task_num">任务ID:</string>
    <string name="tel">电话</string>
    <string name="address">地址</string>
    <string name="order">订单</string>
    <string name="rate">评价</string>
    <string name="confirm">确认</string>
    <string name="menu">详细菜单</string>
    <string name="customer_name">客户姓名</string>
    <string name="customer_tel">联系方式</string>
    <string name="customer_address">送餐地址</string>
    <string name="customer_rate">服务评价</string>
    <string name="shop_address">取餐地址</string>
    <string name="shop_name">商户名称</string>
    <string name="best">非常满意</string>
    <string name="good">满意</string>
    <string name="bad">不满意</string>
    <string name="total_cash">总计金额</string>
    <string name="order_time">下单时间</string>
    <string name="order_num">订单编号</string>
    <string name="zero_people">0人</string>
    <string name="zero_shop">0家</string>
    <string name="yuan">元</string>
    <string name="fen">份</string>
    <string name="chu">处</string>
    <string name="ge">个</string>
    <string name="temp_time">00:00</string>
    <string name="temp_date">0000-00-00</string>
    <string name="temp_type">取餐商户</string>
    <string name="temp_name">第一佳大鸡排（清华店）</string>
    <string name="temp_address">清华大学东配楼11-303</string>
    <string name="temp_tel">13611311239</string>
    <string name="temp_order_num">CFE-201312220001</string>
    <string name="temp_customer">杨迪</string>
    <string name="temp_shop">第一佳大鸡排（清华店）</string>
    <string name="temp_cash">0元</string>
    <string name="temp_zero">0</string>
    
    <string name="btn_finish">完成任务</string>
    <string name="btn_accept_order">接单</string>

</resources>