<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_selector"
    android:padding="10dp" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
        
        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	android:textSize="16dp"
            	android:textColor="@color/dimgray"
            	android:drawableLeft="@drawable/icon_order"
            	android:drawablePadding="5dp"
            	android:text="@string/order_num" />
        
        	<TextView
            	android:id="@+id/list_num"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:paddingLeft="10dp"
            	android:textSize="16dp"
            	android:textColor="@color/text"
            	android:text="@string/temp_order_num" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
        
        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	android:textSize="16dp"
            	android:textColor="@color/dimgray"
            	android:drawableLeft="@drawable/icon_cash"
            	android:drawablePadding="5dp"
            	android:text="@string/total_cash" />
        
        	<TextView
            	android:id="@+id/list_cash"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:paddingLeft="10dp"
            	android:textSize="16dp"
            	android:textColor="@color/text"
            	android:text="@string/temp_zero" />
        
        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:paddingLeft="2dp"
            	android:textSize="16dp"
            	android:textColor="@color/text"
            	android:text="@string/yuan" />
            
        </LinearLayout>
    
</LinearLayout>