<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_selector"
    android:padding="5dp" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/order_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_get" />
            
        <TextView
            android:id="@+id/order_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/dimgray"
            android:text="@string/temp_type" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >
            
        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:text="@string/temp_name" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/order_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/dimgray"
            android:drawableLeft="@drawable/icon_address"
            android:drawablePadding="5dp"
            android:text="@string/address" />
            
        <TextView
            android:id="@+id/order_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/temp_address" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/dimgray"
            android:drawableLeft="@drawable/icon_tel"
            android:drawablePadding="5dp"
            android:text="@string/tel" />
            
        <TextView
            android:id="@+id/order_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/temp_tel" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/dimgray"
            android:drawableLeft="@drawable/icon_order"
            android:drawablePadding="5dp"
            android:text="@string/order" />
            
        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/temp_order_num" />
    
    </LinearLayout>
    
    </LinearLayout>
</LinearLayout>