<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_bg"
    android:padding="10dp" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
            
        <TextView
            android:id="@+id/menu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/temp_customer" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >
            
        <TextView
            android:id="@+id/menu_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/temp_zero" />
            
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/fen" />
            
        <TextView
            android:id="@+id/menu_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/temp_zero" />
            
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/yuan" />
        
        </LinearLayout>
    
    </RelativeLayout>
    
</LinearLayout>