<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_selector"
    android:padding="5dp" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
            
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/task_num"
            android:drawableLeft="@drawable/icon_position"
            android:drawablePadding="5dp" />
            
        <TextView
            android:id="@+id/task_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/temp_zero" />
      <!--       
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text"
            android:text="@string/ge" />--> 
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >
            
        <TextView
            android:id="@+id/task_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:textColor="@color/dimgray"
            android:text="@string/temp_time" />
            
        <TextView
            android:id="@+id/task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/dimgray"
            android:text="@string/temp_date" />
    
    </LinearLayout>
    
</LinearLayout>